<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    >
	    <TextView 
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
            android:text="@string/FilenameSave"
    	/>
	</LinearLayout>
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
    >
        <EditText
             android:id="@+id/etFilenameSave"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
            android:inputType="text"
            android:focusable="true"
            android:focusableInTouchMode="true"
                  android:hint="@string/Hint_etSave"
        />                                 
    </LinearLayout>
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
    >
        <Button
            android:id="@+id/Save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Save"
            android:layout_weight="1"
        />
        <Button
            android:id="@+id/Cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Cancel"
            android:layout_weight="1"
        />
    </LinearLayout>
</LinearLayout>
